--- a/angular.json
+++ b/angular.json
@@ -96,7 +96,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/teste.js"
             ],
             "styles": [
               "src/styles.scss"
